fix sound button on safari

--- a/src/sass/partials/sound-button.sass
+++ b/src/sass/partials/sound-button.sass
@@ -22,7 +22,7 @@
 
 .sound-button__icon
     height: 80%
-    width: auto
+    width: 40%
 
     margin: auto 0
 
@@ -35,7 +35,7 @@
 
 .sound-button__line
     width: 4px
-    height: 100%
+    height: 20px
 
     margin: 0 1px
 
